samples/_failures_safe/1761519210_e066df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec8ccef9.c: In function ‘main’:
./samples/SAFE/__tmp_ec8ccef9.c:131:34: error: missing terminating " character
  131 |                 rows2 = read_int("
      |                                  ^
./samples/SAFE/__tmp_ec8ccef9.c:131:17: error: expected expression at end of input
  131 |                 rows2 = read_int("
      |                 ^~~~~
./samples/SAFE/__tmp_ec8ccef9.c:131:25: error: too few arguments to function ‘read_int’
  131 |                 rows2 = read_int("
      |                         ^~~~~~~~
./samples/SAFE/__tmp_ec8ccef9.c:10:5: note: declared here
   10 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_ec8ccef9.c:131:17: error: expected declaration or statement at end of input
  131 |                 rows2 = read_int("
      |                 ^~~~~
./samples/SAFE/__tmp_ec8ccef9.c:131:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec8ccef9.c:131:17: error: expected declaration or statement at end of input
